Adding about myself

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -45,4 +45,65 @@
             Hello World!!
         </h2>
     </div>
+
+    <div role="presentation" id="continue">
+        <a role="button" id="continueButton" href="#introduction" data-animation="fade-in" data-animation-duration="500" data-animation-delay="2000" data-animation-offset="0">Continue</a>
+    </div>
+<!-- 자기소개 -->
+    <div id="introduction" class="l-section l-split">
+
+        <!-- 소개말 -->
+        <section role="region" id="myself" class="l-section">
+            <div class="l-section-inner" data-animation="zoom-in-right">
+                <h2 class="section-heading">
+                    <span class="secondary">Intro</span>
+                    <span class="primary">About myself</span>
+                </h2>
+
+                <div class="section-content">
+                    <p> Hello World !! </p>
+                </div>
+            </div>
+        </section>
+        
+        <!-- 기술 -->
+        <section role="region" id="skills" class="l-section">
+            <div class="l-section-inner" data-animation="zoom-in-left">
+                <h2 class="section-heading">
+                    <span class="secondary">Skills</span>
+                    <span class="primary">What I can do</span>
+                </h2>
+
+                <div class="section-content">
+                    <figure>
+                        <figcaption class="list-caption">Skill</figcaption>
+                        <ul class="skill-list checked-list">
+                            <li>Skill detail - 1</li>
+                            <li>Skill detail - 2</li>
+                            <li>Skill detail - 3</li>
+                        </ul>
+                    </figure>
+
+                    <figure>
+                        <figcaption class="list-caption">Skill</figcaption>
+                        <ul class="skill-list checked-list">
+                            <li>Skill detail - 1</li>
+                            <li>Skill detail - 2</li>
+                            <li>Skill detail - 3</li>
+                        </ul>
+                    </figure>
+
+                    <figure>
+                        <figcaption class="list-caption">Skill</figcaption>
+                        <ul class="skill-list checked-list">
+                            <li>Skill detail - 1</li>
+                            <li>Skill detail - 2</li>
+                            <li>Skill detail - 3</li>
+                        </ul>
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+    </div>
 </div>
